# postures

./: .gitignore  posturesControl.pd  testScene01.xml
HMR/: LTC-main.pd  LTC-models-test.pd  box-test.pd  hotspot.pd  spinEdit.pd  step-models.pd  step1-models.pd  step2-models.pd  step3-models.pd  step4-models.pd  step5-models.pd  step6-models.pd  step7-models.pd
PosturePad/: Launch_PosturePad.psd  LowpassSwitch.psd  MainWindow.xib  NTARemoteViewController.xib  PosturePad Device-Info.plist  PosturePad-Info copy.plist  PosturePad-Info.plist  PosturePad_Prefix.pch  main.m
doc/: launcher.dia  lunch.dia  lunch.txt
panoViewer/: Makefile  logo_panoViewer.icns  panoViewer.cpp  panoViewer.h  panoViewer.plist.in  panoViewerApp.cpp
projects/turcot/makeFakeBubbles/: Makefile.am  configure.ac  main.cpp  makeAllBubbles  makeFakeBubbles
projects/turcot/makeFakeBubbles/.deps/: makeFakeBubbles-main.Po
prototypes/: README  cameraSwitcher.pd  createAvatar.pd  createSharedVideo.pd  createSharedVideo1.pd  createUser.pd  createVideoBillboards.pd  posturesUser.pd  simpleExample.pd  spinicExample.pd  userMeasurement.pd
py/: Makefile
scripts/: Makefile  Postures.desktop  WAY_single.lunch  WAY_single_split.lunch  cinematheque.lunch  csshrc  killlunch  launch_postures  lunch-4cam  lunch-localTest  lunch-panoTest  nta.ds  pdextended  pdsettings  pdsettings-0.3.0  pdsettings-0.3.5  pittsburgh.lunch  postureVars.py  posturesConf-0.3.0.sh  posturesConf-0.3.5.sh  posturesConf.sh  poznan.lunch  renamer  synergy.conf.2screen  synergy.conf.3screen  toronto.lunch  xorg.conf
spinic/: run  (+2 more)
(+232 files in other folders)
